<resources>
    <string name="app_name">Parentify</string>
    <string name="title_notifications">Notifications</string>
    <string name="news">Article</string>
    <string name="favorites">Profile</string>
    <string name="news_image">News image</string>
    <string name="lorem_ipsum_sentences">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_ipsum_paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Et tortor consequat id porta nibh venenatis cras sed. Malesuada nunc vel risus commodo viverra. Molestie at elementum eu facilisis sed odio morbi quis. Leo vel orci porta non pulvinar neque. Donec massa sapien faucibus et molestie ac. Malesuada fames ac turpis egestas. Feugiat nibh sed pulvinar proin gravida. Pulvinar sapien et ligula ullamcorper malesuada proin libero nunc consequat. Interdum velit laoreet id donec. Amet nulla facilisi morbi tempus iaculis urna. Tincidunt dui ut ornare lectus sit amet est placerat in. Amet mauris commodo quis imperdiet massa tincidunt nunc. Velit ut tortor pretium viverra suspendisse potenti nullam ac tortor. Semper viverra nam libero justo laoreet sit amet. Pellentesque dignissim enim sit amet venenatis urna. Aliquam eleifend mi in nulla. Maecenas sed enim ut sem viverra. Lorem ipsum dolor sit amet consectetur adipiscing elit duis tristique. Faucibus scelerisque eleifend donec pretium. Condimentum vitae sapien pellentesque habitant morbi. Ultricies integer quis auctor elit sed vulputate mi sit. Eleifend donec pretium vulputate sapien nec. Aliquet sagittis id consectetur purus ut faucibus pulvinar.</string>
    <string name="go_to_source">Go to source</string>
    <string name="clear_search">Clear search</string>
    <string name="search_bar_hint">Search article</string>
    <string name="share">Share</string>
    <string name="profile">Profile</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="already_registered_log_in">Already registered? Log in</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_btn">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_btn">Log in</string>
    <string name="email_or_username">email or username</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_anda">Username Anda</string>
    <string name="txt_reg_email_anda">Email Anda</string>
    <string name="txt_reg_e_mail">E-mail</string>
    <string name="txt_reg_password">Password</string>
    <string name="txt_reg_password_anda">Password Anda</string>
    <string name="txt_reg_log_in">Log in</string>
    <string name="txt_e_mail_login">E-mail Address</string>
    <string name="txt_login_email_anda">Email Anda</string>
    <string name="txt_login_password">Password</string>
    <string name="txt_login_password_anda">Password Anda</string>
    <string name="txt_btn_log_in">LOG IN</string>
    <string name="txt_btn_sign_up">REGISTER</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_accounts">Don\'t have an account?</string>
    <string name="txt_register">register</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="tv_username_or_email">Username or Email</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_about_parentify">About Parentify</string>
    <string name="txt_logout_profile">Logout</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_new_password">New Password</string>
    <string name="txt_enter_new_pass">Masukkan Password Baru</string>
    <string name="txt_confirm_pass">Masukkan Ulang Password Baru</string>
    <string name="txt_btn_next">REGISTER</string>
    <string name="txt_phone_number">Nomor Handphone Anda</string>
    <string name="txt_edit_profile">EDIT PROFILE</string>
    <string name="txt_new_username">New Username</string>
    <string name="txt_uname_new">Masukkan Username Baru</string>
    <string name="txt_new_e_mail">New E-mail</string>
    <string name="txt_new_email">Masukkan Email Baru</string>
    <string name="txt_old_pass">Masukkan Password Lama</string>
    <string name="txt_new_pass">New Password</string>
    <string name="txt_pass_mew">Masukkan Password Baru</string>
    <string name="txt_save">SAVE</string>
    <string name="txt_code_otp">Code OTP</string>
    <string name="txt_otp">Code OTP</string>
    <string name="txt_send">Send</string>
    <string name="txt_nomor_handphone_anda">Nomor Handphone Anda</string>
    <string name="txt_resend_otp">Resend OTP</string>
    <string name="txt_faq">Frequently Asked Question</string>
    <string name="txt_parentify">Parentify</string>
    <string name="txt_log_in">Log in</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="text_about_parentify">Prevalensi stunting di Indonesia mencapai 21,6% berdasarkan data 2022 Kementerian Kesehatan. Stunting disebabkan oleh kekurangan gizi pada dua tahun pertama kehidupan anak, terkait akses terbatas ke makanan bergizi, rendahnya asupan vitamin, mineral, dan keberagaman sumber protein. Selain masalah stunting yang berdampak besar pada perkembangan anak, kekhawatiran lain yang tidak kalah penting adalah peran orang tua. Studi Universitas Washington menegaskan bahwa pengasuhan sesuai kepribadian anak dapat mengurangi risiko gangguan mental. Dalam konteks ini, Parentify hadir sebagai solusi, menyediakan artikel yang membantu pengguna memahami informasi gizi dan parenting secara mendalam.</string>
    <string name="txt_otp_verification">OTP Verification</string>
    <string name="info_get_otp">We will send you an one time password on this mobile number</string>
    <string name="mobile_number">Enter Phone Number</string>
    <string name="txt_btn_get_otp">GET OTP</string>
    <string name="txt_otp_verifi">OTP Verification</string>
    <string name="txt_verif">Enter the OTP sent to</string>
    <string name="txt_otp_nosend">Did not receive the OTP?</string>
    <string name="txt_resend_otp_reg">RESEND OTP</string>
    <string name="txt_verify_otp">VERIFY</string>
    <string name="txt_parentify_about">PARENTIFY</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="old_password">Old Password</string>
    <string name="nama_gmail_com">nama@gmail.com</string>
    <string name="tv_username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="parentify">Parentify</string>
    <string name="tv_forgot_password_2">Forgot Password?</string>
    <string name="tv_phone_number_2">Phone Number</string>
    <string name="back">BACK</string>
    <string name="_08xxxxxx">08XXXXXX</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>