<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light"
    tools:context=".ui.auth.RegisterActivity">

    <TextView
        android:id="@+id/tv_parentify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-10dp"
        android:text="@string/txt_parentify"
        android:textColor="@color/pink"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="108dp"
        android:layout_marginStart="-20dp"
        android:src="@drawable/ic_logo_paren"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <TextView
        android:id="@+id/tv_create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_parentify"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/tv_reg_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_username"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_acc"
        app:layout_constraintVertical_bias="0.045" />

    <EditText
        android:id="@+id/register_uname"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_box_text"
        android:hint="@string/txt_username_anda"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_Username"
        app:layout_constraintVertical_bias="0.02"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_reg_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_reg_e_mail"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_uname"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_box_text"
        android:hint="@string/txt_reg_email_anda"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_Email"
        app:layout_constraintVertical_bias="0.032"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_reg_password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginStart="-5dp"
        android:background="@drawable/ic_box_text"
        android:hint="@string/txt_reg_password_anda"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reg_password"
        app:layout_constraintVertical_bias="0.053"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_confirm_password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:layout_constraintVertical_bias="0.04" />

    <EditText
        android:id="@+id/register_confirm_password"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_box_text"
        android:hint="@string/txt_confirm_pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_password"
        app:layout_constraintVertical_bias="0.053"
        tools:ignore="Autofill,TextContrastCheck,TextFields" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="382dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/black"
        android:text="@string/txt_btn_sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_password"
        app:layout_constraintVertical_bias="0.636"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/btn_signup"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/txt_reg_log_in"
            android:textColor="@color/blue"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
