<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light"
    tools:context="com.example.myapplication.detail.DetailSetting">


    <TextView
        android:id="@+id/tv_parentify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-60dp"
        android:layout_marginTop="-10dp"
        android:text="@string/txt_parentify"
        android:textColor="@color/pink"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="108dp"
        android:layout_marginStart="-20dp"
        android:src="@drawable/ic_logo_paren"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription,VisualLintBounds" />

    <TextView
        android:id="@+id/tv_edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151"
        tools:layout_editor_absoluteX="15dp" />

    <TextView
        android:id="@+id/tv_nw_uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_new_username"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_profile"
        app:layout_constraintVertical_bias="0.063" />


    <EditText
        android:id="@+id/et_edit_uname"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_box_text"
        android:hint="@string/txt_uname_new"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nw_uname"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_nw_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_new_e_mail"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_uname"
        app:layout_constraintVertical_bias="0.053" />

    <EditText
        android:id="@+id/et_edit_email"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_box_text"
        android:hint="@string/txt_new_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nw_email"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_old_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/old_password"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_email"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/et_edit_old_pass"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_box_text"
        android:hint="@string/txt_old_pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_old_pass"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/tv_nw_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_new_pass"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_edit_old_pass"
        app:layout_constraintVertical_bias="0.102" />

    <EditText
        android:id="@+id/et_edit_pass"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_box_text"
        android:hint="@string/txt_pass_mew"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nw_pass"
        app:layout_constraintVertical_bias="0.049"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/btn_profile_back"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="BACK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btn_profile_save"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/txt_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="@id/btn_profile_back"
        app:layout_constraintTop_toBottomOf="@id/btn_profile_back"
        app:layout_constraintVertical_bias="0"
        tools:ignore="VisualLintButtonSize" />



</androidx.constraintlayout.widget.ConstraintLayout>